# time-tracker

./: README.md  pyproject.toml  start_dashboard.pyw
src/: README.md
src/time_tracker/: __init__.py  cli.py  collector.py  config.py  db.py  models.py  normalization.py  paths.py  reporting.py  server_runner.py  webapp.py
src/time_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/time_tracker/static/: app.js  index.html  styles.css
