[build-system]
requires = ["setuptools>=66.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-tracker"
version = "0.1.0"
description = "Lightweight, local-first activity collector for personal time tracking."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
license = { text = "MIT" }
dependencies = [
  "typer>=0.12.3",
  "platformdirs>=4.2.0",
  "psutil>=6.0.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "black>=24.4.0",
  "ruff>=0.5.0"
]

[project.scripts]
time-tracker = "time_tracker.cli:app"
